登录注册部分

--- a/src/style.css
+++ b/src/style.css
@@ -320,8 +320,9 @@ span {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 5px 2px;
     cursor: pointer;
+    border-radius: 3px;
 }
 
 .goods .btn:hover {
