--- a/src/style.css
+++ b/src/style.css
@@ -70,6 +70,13 @@
     /* 文字居中 */
 }
 
+.welcome {
+    font-weight: bold;
+    color: #C81623;
+    text-align: center;
+    font-size: 30px;
+  }
+
 .logo1 {
     background-image: url('./img/logo1.png');
     background-color: #ffffff;
@@ -516,3 +523,82 @@ td img {
     font-weight: bold;
     font-size: 18px;
 }
+
+/* 登录注册样式 */
+
+.register-form,
+.login-form {
+  margin: 20px; /* 设置外边距 */
+  padding: 20px;
+  position: relative;
+  display: flex;
+  justify-content: center;
+}
+
+.register-form form,
+.login-form form {
+  background-color: #ffffff; /* 白色表单背景 */
+  padding: 20px;
+  border-radius: 0 0 10px 10px; /* 圆角边框 */
+  width: 300px; /* 设置表单宽度 */
+  position: relative;
+}
+
+.register-form form::before,
+.login-form form::before {
+  content: '';
+  position: absolute;
+  top: -10px;
+  left: 0;
+  width: 100%;
+  height: 10px;
+  border-radius: 5px 5px 0 0;
+  background-color: #DD2727; /* 设置颜色 */
+}
+
+.register-form form label,
+.login-form form label {
+  background-color: #ffffff; /* 白色背景 */
+  display: block;
+  margin-bottom: 15px;
+}
+
+.register-form form input[type="text"],
+.register-form form input[type="password"],
+.login-form form input[type="text"],
+.login-form form input[type="password"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: 1px solid #ccc;
+  border-radius: 3px;
+  box-sizing: border-box;
+}
+
+.register-form form input[type="submit"],
+.login-form form input[type="submit"] {
+  width: 100%;
+  padding: 10px;
+  margin-bottom: 10px;
+  border: none;
+  border-radius: 3px;
+  cursor: pointer;
+  color: #fff;
+}
+
+.register-form form input[type="submit"] {
+  background-color: #DD2727; /* 红色按钮 */
+  font-size: 16px;
+  margin-top: 15px;
+}
+
+.login-form form input[type="submit"] {
+  background-color: #DD2727; /* 红色按钮 */
+  font-size: 16px;
+  margin-top: 15px;
+}
+
+
+
+
+  
